Prevent showing scrollbar

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -986,6 +986,6 @@ fieldset.warning legend + p, fieldset.update legend + p {
     }
     #body-login p.info {
         margin: 0 auto;
-        padding-top: 40px;
+        padding-top: 35px;
     }
 }
